--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
       margin: 0;
     }
     </style>
-    <title>Auloheritage React App</title>
+    <title>Blog React App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
